--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.3.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
+    "@tippyjs/react": "^4.2.6",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
